welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:13: error: missing arguments for method setCouleurBrosse in class AbstractBuggle;
follow this method with `_' if you want to treat it as a partially applied function
      setCouleurBrosse
      ^MethodsPicture:20: error: missing arguments for method setCouleurBrosse in class AbstractBuggle;
follow this method with `_' if you want to treat it as a partially applied function
      setCouleurBrosse
      ^MethodsPicture:26: error: missing arguments for method setCouleurBrosse in class AbstractBuggle;
follow this method with `_' if you want to treat it as a partially applied function
      setCouleurBrosse
      ^