welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
}

def faireV(c:Color){
  for (cpt <- 1 to 3){
    for (cp2 <- 1 to 4){
      avance()
      baisseBrosse()
      leveBrosse()
      avance()
      gauche()
      avance()
      setCouleurBrosse
      baisseBrosse()
      leveBrosse()
      droite()
      avance()
      droite()
      avance()
      setCouleurBrosse
      baisseBrosse()
      leveBrosse()
      gauche()
      avance(2)
      gauche()
      setCouleurBrosse
  
    }
    avance(5)
  }
  retourne()
  avance(21)
  droite()
  avance(7)
  droite()
} 